Horizontal scroll fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,11 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@theme {
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+}
+
 :root {
   --background: oklch(0.129 0.042 264.695);
   --foreground: oklch(0.984 0.003 247.858);
@@ -40,7 +45,6 @@
   --radius: 0.75rem;
 }
 
-/* 00FF95 */
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
